[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/InterfaceController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ScoreController.gd" type="Script" id=2]
[ext_resource path="res://Scripts/EndOfLevelController.gd" type="Script" id=3]

[node name="InterfaceController" type="CanvasLayer" groups=["InterfaceController"]]
script = ExtResource( 1 )

[node name="Score" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Score"]
margin_left = 44.0
margin_top = 17.0
margin_right = 185.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="Score"]
margin_left = 59.0
margin_top = 30.0
margin_right = 130.0
margin_bottom = 57.0
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="RichTextLabel" parent="Score"]
margin_left = 107.0
margin_top = 30.0
margin_right = 235.0
margin_bottom = 57.0
text = "1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndOfLevel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="EndOfLevel"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0

[node name="Panel" type="Panel" parent="EndOfLevel/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="RichTextLabel" parent="EndOfLevel/Popup"]
margin_left = 96.0
margin_top = 266.0
margin_right = 167.0
margin_bottom = 293.0
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="RichTextLabel" parent="EndOfLevel/Popup"]
margin_left = 146.0
margin_top = 266.0
margin_right = 274.0
margin_bottom = 293.0
text = "1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLose" type="RichTextLabel" parent="EndOfLevel/Popup"]
margin_left = 52.0
margin_top = 81.0
margin_right = 252.0
margin_bottom = 181.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevelButton" type="Button" parent="EndOfLevel/Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -59.0
margin_right = 95.0
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="EndOfLevel/Popup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -59.0
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="EndOfLevel/Popup/RestartLevelButton" to="EndOfLevel" method="_on_RestartLevelButton_button_down"]
[connection signal="button_down" from="EndOfLevel/Popup/NextLevelButton" to="EndOfLevel" method="_on_NextLevelButton_button_down"]
